<resources>
    <string name="app_name">RSHLN Admin</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="fab_description">this button is used to add the product</string>
    <string name="title_add_product_fragment">Add Product Fragment</string>
    <string name="add_product_label_text">Add New Product</string>
    <string name="enter_product_name_text">Enter Product Name</string>
    <string name="enter_product_description_text">Enter Product Description</string>
    <string name="enter_product_price_text">Enter Price in INR</string>
    <string name="is_product_available_text">Product Is Available</string>
    <string name="add_product_button_text">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="title_product_detail_fragment">Product Detail</string>
    <string name="title_order_detail_fragment">Order Details</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="amount_payable">Payable Amount</string>
    <string name="title_update_order_fragment">Update Order Details</string>
    <string name="order_approved">Order Approved</string>
    <string name="order_rejected">Order Rejected</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_packed">Order Packed</string>
    <string name="order_shipped">Order Shipped</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="item">Item</string>
    <string name="product_delete_warning">Are you sure you want to delete this product</string>
</resources>