<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_orders">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.rshlnadmin.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.rshlnadmin.ui.products.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_products_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.rshlnadmin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.rshlnadmin.ui.AddProductFragment"
        android:label="AddProductFragment" >
        <action
            android:id="@+id/action_addProductFragment_to_navigation_products"
            app:destination="@id/navigation_products" />
    </fragment>
</navigation>